# 8086_simulator

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: decoder.cpp  memory.cpp  operations.cpp  simulator.cpp  window.cpp
src/include/: decoder.h  memory.h  operations.h  window.h
